#fix: fancy background overflow bug

--- a/styles/mixins.sass
+++ b/styles/mixins.sass
@@ -210,6 +210,7 @@ $border-radius: geometry.radius("small")
 @mixin fancy-background
   position: relative
   z-index: 1
+  overflow: hidden
 
   // background color to extend to entire screen width
   &::before
